# crystalfontz

./: CHANGELOG.md  README.md  TODO.md  crystalfontz.spec  crystalfontz.spec.tmpl  justfile  output.txt  pyproject.toml  requirements_dev.txt  requirements_dev.txt.in  test.py
.github/workflows/: qa.yaml
crystalfontz/: __init__.py  atx.py  baud.py  character.py  cli.py  client.py  codec.py  command.py  config.py  cursor.py  device.py  effects.py  error.py  format.py  gpio.py  keys.py  packet.py  protocol.py  receiver.py  report.py  response.py  temperature.py
crystalfontz/character/: __init__.py  rom.py  special.py
crystalfontz/dbus/: __init__.py  __main__.py  bus.py  client.py  config.py  effects.py  interface.py  map.py  report.py  select.py  service.py
crystalfontz/dbus/client/: __init__.py  cli.py
crystalfontz/dbus/domain/: __init__.py  atx.py  base.py  character.py  command.py  config.py  device.py  gpio.py  keys.py  lcd.py  response.py  temperature.py
crystalfontz/dbus/map/: __init__.py  atx.py  base.py  baud.py  character.py  command.py  config.py  cursor.py  device.py  keys.py  lcd.py  response.py  temperature.py
crystalfontz/dbus/service/: __init__.py  __main__.py  cli.py
docs/: cli.md  development.md  install.md  support.md  usage.md
docs/api/: crystalfontz.dbus.client.md  crystalfontz.dbus.domain.md  crystalfontz.dbus.interface.md  crystalfontz.dbus.md
docs/api/crystalfontz.dbus/: crystalfontz.dbus.domain.md  index.md
docs/dbus/: access.md  client.md  iface.md  index.md  service.md
scripts/: bundle-gh-release.sh  generate-spec.sh  gh-release.sh  integration.sh
tests/: conftest.py  helpers.py  integration.sh  packet.py  test_character.py  test_cli.py  test_client.py  test_device.py  test_gpio.py  test_integration.py  test_keys.py  test_packet.py  test_retry.py  test_temperature.py
tests/__snapshots__/: test_cli.ambr  test_device.ambr  test_keys.ambr
tests/dbus/: test_config.py  test_domain.py
tests/dbus/__snapshots__/: test_config.ambr  test_domain.ambr
tests/dbus/domain/: test_pack_unpack.py
tests/integration/: test_cli.py  test_crystalfontz.py  test_dbus.py
tests/integration/__snapshots__/: test_cli.ambr  test_dbus.ambr
(+1 files in other folders)
