[build-system]
requires = ["setuptools", "setuptools-scm", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crystalfontz"
version = "1.0.0"
authors = [
  {name = "Josh Holbrook", email = "josh.holbrook@gmail.com"}
]
description = "Library for interacting with crystalfontz LCD displays"
readme = "README.md"
keywords = []
license = { text = "Apache-2.0" }
dependencies = [
  "appdirs",
  "pyserial",
  "pyserial-asyncio",
  "pyyaml",
]


[project.optional-dependencies]
dev = [
  "flake8",
  "flake8-black",
  "pytest",
  "black",
  "isort",
  "jupyter-console",
  "mkdocs",
  "mkdocs-bootstrap386",
  "mkdocstrings[python]",
  "tox",
  "twine",
  "validate-pyproject[all]",
]

[tool.isort]
profile = "appnexus"
known_application = "crystalfontz"

[tool.pyright]
include = ["crystalfontz", "tests"]

[tool.pytest]
addopts = "--verbose -s"
testpaths = [ "tests" ]

[tool.setuptools]
packages = [ "crystalfontz" ]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
optional-dependencies.dev = { file = ["requirements_dev.txt"] }
